--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-architect
+title: Welcome to Satyam's homepage!
+description: Feel free to bookmark this to keep an eye on project updates 
