--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-architect
-title: Welcome to Satyam's homepage!
+title: Welcome to Satyam Tandon's homepage!
 description: Feel free to bookmark this to keep an eye on project updates 
 
-##Hello
+
