--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-architect
-url: /satyamt13.github.io
+url: "https://satyamt13.github.io/"
 title: Welcome to Satyam Tandon's homepage!
 description: Feel free to bookmark this to keep an eye on project updates 
 
