--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-architect
+theme: jekyll-theme-time-machine
 url: "https://satyamt13.github.io/"
 title: Satyam's Data Science Portfolio
 description: Feel free to bookmark this to keep an eye on my project updates!
