--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-time-machine
 url: "https://satyamt13.github.io/"
-title: Satyam's Data Science Portfolio
+title: Satyam's Data Projects Portfolio
 description: Feel free to bookmark this to keep an eye on my project updates!
 
 
